--- a/Digi21.DigiNG.IO.Geomedia/Digi21.DigiNG.IO.Geomedia.csproj
+++ b/Digi21.DigiNG.IO.Geomedia/Digi21.DigiNG.IO.Geomedia.csproj
@@ -21,7 +21,8 @@
     <FileVersion>4.0.0.0</FileVersion>
     <Version>24.0.0</Version>
     <PackageIcon>IconoDigi21.png</PackageIcon>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+    <IsPublishable>True</IsPublishable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Digi21.DigiNG" Version="24.0.0" />
