--- a/NuGet/Digi21.DigiNG.Io.Geomedia.nuspec
+++ b/NuGet/Digi21.DigiNG.Io.Geomedia.nuspec
@@ -1,14 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
+<package xmlns="http://schemas.microsoft.com/packaging/2013/01/nuspec.xsd">
 	<metadata>
 		<id>Digi21.DigiNG.IO.Geomedia</id>
 		<version>24.0.0</version>
-		<authors>Digi21.DigiNG.IO.Geomedia</authors>
+		<authors>José Ángel Martínez Torres</authors>
 		<owners></owners>
-		<requireLicenseAcceptance>false</requireLicenseAcceptance>
+		<license type="expression">MIT</license>
+		<readme>README.md</readme>
 		<icon>IconoDigi21.png</icon>
-		<description>Contains the types for serializing Geomedia MDB Datawarehouse files</description>
-		<copyright>Copyright 2010-2024 Digi21.net</copyright>
+		<description>This package contains a reference assembly with types for reading/creating Geomedia Datawarehouse (*.mdb) files on computers with Digi3D.NET installed.
+
+A Digi3D.NET license is required to run applications that use the assemblies published by this package. Rent a license at https://www.digi21.net/Tienda/Alquiler or buy a license at https://www.digi21.net/Tienda/Compra
+		</description>
+		<projectUrl>https://digi3d.net/</projectUrl>
+		<copyright>(c) 2000-2024 Dreaming With Objects S.L.</copyright>
+		<tags>Digi3D Digi3D.NET Digi21 Digi DigiNG Geomedia MDB</tags>
+		<repository type="git" url="https://github.com/digi21/Digi21.DigiNG.IO.Geomedia.git" />
 		<dependencies>
 			<group targetFramework="net8.0">
 				<dependency id="Digi21.DigiNG" version="24.0.0" />
@@ -16,6 +23,7 @@
 		</dependencies>
 	</metadata>
 	<files>
+		<file src="README.md" target="README.md" />
 		<file src="..\Digi21.DigiNG.IO.Geomedia\obj\Release\net8.0\ref\Digi21.DigiNG.IO.Geomedia.dll" target="ref\net8.0\Digi21.DigiNG.IO.Geomedia.dll" />
 		<file src="IconoDigi21.png" target="IconoDigi21.png" />
 		<file src="Digi21.DigiNG.IO.Geomedia.targets" target="build\Digi21.DigiNG.IO.Geomedia.targets" />
